# Devv-Core

./: .clang-format  .gitignore  COPYING  Doxyfile  Jenkinsfile  bitbucket-pipelines.yml  init.cpp
Debug/: config  input  log  makefile  sources.mk
Debug/src/: devcash.d  init.d  subdir.mk  sync.d  uint256.d  util.d  utilstrencodings.d  utiltime.d
aws/: announcer-start-task-t2-s1-n0.json  validator-start-task-t2-s1-n0.json  validator-start-task-t2-s1-n1.json  validator-start-task-t2-s1-n2.json
common/: ossladapter.h
consensus/: blockmanager.cpp  blockmanager.h  validation.h
doc/: devcash_umbrello_model.xmi  devv_umbrello_model.xmi  test_project.xmi
docker/: Dockerfile-ppc64le-ubuntu16.04  Dockerfile-x86_64-ubuntu16.04  Dockerfile-x86_64-ubuntu16.04-dev  Dockerfile-x86_64-ubuntu16.04-prod  bashrc  build_docker_images.sh  entrypoint.sh  fbzmq_docker_build.patch  install_devcash.sh  install_devvio.sh  install_fbzmq.sh  install_flatbuffers.sh  install_googletest.sh  install_protobuf_v3.sh  install_virtualenvwrapper.sh  setup_virtualenv.sh
examples/java/: CMakeLists.txt  io_devv_test_DevvTestMain.cpp  io_devv_test_DevvTestMain.h
examples/python/: setup.py
opt/: 05txs  1000txs  21txs  basic_shard.conf  config  default_pass.conf  devv.proto  devvnet_config.yaml  inn.key  node.key  out.hex  out.json  pk.key  t2shard.yaml  txs  wallet.key
primitives/: block.cpp  smartcoin.h  transaction.cpp
python/: .gitignore  LICENSE  setup.py
python/devv/: __init__.py  devv.py
scripts/: batch_run.sh  batch_submit.sh  build-container-image.sh  build-devcash.sh  build-local-devcash.sh  devcash-format.sh  devv  devv-format.sh  devvnet_manager.py  devvnet_manager_aws.py  process_config.py  reset-shard1-blockchain.sh  run_and_log.sh  run_devcash_node.py  run_devcash_node.sh  run_devv_node.py  run_devv_node.sh  run_shard.py  rundevv.sh  shard-control.py  sub_client.py  synchronize_devcash_nodes.py  synchronize_devv_nodes.py  transaction_pubtest.py
sql/: psql_dbsetup.sql
src/: CMakeLists.txt  DevcashMessage.h  announcer.cpp  circuit-gen.cpp  circuit.cpp  db_repeater.cpp  devcash.cpp  devcashnode.cpp  devcashnode.h  devv-announcer.cpp  devv-key.cpp  devv-psql.cpp  devv-query.cpp  devv-scanner.cpp  devv-sign.cpp  devv-validator.cpp  devv-verify.cpp  devvsign.cpp  indirectmap.h  init.cpp  init.h  laminar-gen.cpp  laminar.cpp  memusage.h  ossladapter.h  pb_announcer.cpp  prevector.h  repeater.cpp  reset-db.cpp  scanner.cpp  sync.cpp  sync.h  threadsafety.h  turbulent-gen.cpp  turbulent.cpp  uint256.cpp  uint256.h  util.cpp  util.h  utilstrencodings.cpp  (+4 more)
src/common/: argument_parser.h  binary_converters.h  ctpl.h  devcash_constants.h  devcash_context.h  devcash_exceptions.h  devcash_types.h  devv_constants.h  devv_context.h  devv_exceptions.h  devv_types.h  devv_uri.h  devv_version.cpp.in  devv_version.h  dynamic_pointer_cast.h  logger.cpp  logger.h  minitrace.c  minitrace.h  ossladapter.h  types.h  util.cpp  util.h
src/compat/: endian.h
src/concurrency/: ConsensusController.cpp  ConsensusController.h  DevcashController.cpp  DevcashController.h  DevcashMPMCQueue.h  DevcashRingQueue.h  DevcashSPSCQueue.h  DevcashWorker.cpp  DevcashWorker.cpp.old  DevcashWorker.h  DevcashWorkerPool.h  DevvMPMCQueue.h  DevvRingQueue.h  DevvSPSCQueue.h  InternetworkController.cpp  InternetworkController.h  ThreadGroup.cpp  ThreadGroup.h  TransactionCreationManager.h  ValidatorController.cpp  ValidatorController.h  WorkerTypes.h  concurrentqueue.h
src/consensus/: KeyRing.cpp  KeyRing.h  UnrecordedTransactionPool.cpp  UnrecordedTransactionPool.h  blockchain.h  blockmanager.cpp  blockmanager.h  chainstate.cpp  chainstate.h  finalblock.cpp  finalblock.h  merkle.cpp  merkle.h  params.h  proposedblock.cpp  proposedblock.h  statestub.cpp  statestub.h  tier2_message_handlers.cpp  tier2_message_handlers.h
src/flatbuffers/: FbsFinalBlock.h  FbsManager.h  FbsTransaction.h  FbsTransfer.h  devcash_primitives.fbs  devcash_primitives_generated.h  fbs_strategy.h
src/gtest/: CMakeLists.txt  consensus_test.cpp  ossladapter_test.cpp  pbuf_test.cpp  primitives_test.cpp
src/io/: Devcash.thrift  constants.h  file_ops.cpp  file_ops.h  message_service.cpp  message_service.h  zhelpers.hpp
src/jni/: jni_devv_test_DevvTestMain.cpp  jni_devv_test_DevvTestMain.h
src/jni/devv/java/: DevvTestMain.java
src/modules/: BlockchainModule.cpp  BlockchainModule.h  ModuleInterface.h  ParallelExecutor.h  ThreadedController.h
src/node/: DevcashNode.cpp  DevcashNode.h
src/oracles/: api.h  coin_request.h  data.h  dcash.h  dnero.h  dneroavailable.h  dnerowallet.h  do_transaction.h  id.h  oracleInterface.h  request.h  vote.cpp  vote.h
src/pbuf/: devv.proto  devv_pbuf.h  endpoint.proto
src/primitives/: Address.h  FinalBlock.cpp  FinalBlock.h  ProposedBlock.cpp  ProposedBlock.h  Signature.h  SmartCoin.h  Summary.cpp  Summary.h  SummaryItem.h  TSVBlock.h  Tier1Transaction.cpp  Tier1Transaction.h  Tier2Transaction.cpp  Tier2Transaction.h  Transaction.h  TransactionSummaryBlock.h  Transfer.h  Validation.h  block.cpp  block.h  block_tools.cpp  block_tools.h  buffers.h  factories.h  json_interface.h  smartcoin.h  strategy.h  transaction.cpp  transaction.h  validation.cpp  validation.h
src/queues/: DevcashRingQueue.h  DevcashSPSCQueue.h  DevcashWorkerPool.h
src/support/: cleanse.cpp  lockedpool.cpp
src/tests/: zmq_pull.py  zmq_push.py
src/tests/common/: logger_example.cpp
src/tests/concurrency/: boost_spsc_test.cpp  devcash_spsc_queue_test.cpp  devv_spsc_queue_test.cpp  producer_consumer_queue_test.cpp  ring_queue_test.cpp
src/tests/flatbuffers/: fbs_finalblock.cpp  fbs_transfer.cpp
src/tests/io/: t1_example.cpp  transaction_client.cpp  transaction_server.cpp  transaction_test_struct.h  zmq_envelope_publisher.cpp  zmq_envelope_subscriber.cpp
src/tests/primitives/: identity.cpp
src/tests/queues/: boost_spsc_test.cpp  circular_buffer_test.cpp  devcash_spsc_queue_test.cpp  ring_queue_test.cpp
src/types/: DevcashMessage.h  DevvMessage.h
tests/concurrency/: producer_consumer_queue_test.cpp  (+1 more)
thrift/: devcash.thrift
(+19 files in other folders)
